[package]
name = "webrtc-vad"
description = "Rust interface for the WebRTC Voice-Activity-Detction Module"
version = "0.3.0"
authors = ["kaegi <kaegi.dev@gmail.com>"]
edition = "2018"
keywords = ["voice", "activity", "detection", "ffi", "alass"]
readme = "README.md"
documentation = "https://docs.rs/webrtc-vad"
license = "MIT"
repository = "https://github.com/kaegi/webrtc-vad"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = "1.0.45"
